// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/batch option \`allowMutations\` should batch mutations if \`allowMutations=true\` 1`] = `
{
  "body": "[{"id":"1","query":"mutation {}","variables":{}},{"id":"2","query":"mutation {}","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch option \`allowMutations\` should not batch mutations by default 1`] = `
[
  [
    "/graphql",
    {
      "body": "{"id":"1","query":"mutation {}","variables":{}}",
      "headers": {
        "Accept": "*/*",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "signal": AbortSignal {},
    },
  ],
  [
    "/graphql",
    {
      "body": "{"id":"1","query":"mutation {}","variables":{}}",
      "headers": {
        "Accept": "*/*",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "signal": AbortSignal {},
    },
  ],
]
`;

exports[`middlewares/batch option \`batchTimeout\` should gather different requests into one batch request 1`] = `
{
  "body": "[{"id":"1","query":"","variables":{}},{"id":"3","query":"","variables":{}},{"id":"2","query":"","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch option \`batchTimeout\` should gather different requests into two batch request 1`] = `
[
  [
    "/graphql/batch",
    {
      "body": "[{"id":"1","query":"","variables":{}},{"id":"4","query":"","variables":{}}]",
      "headers": {
        "Accept": "*/*",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "url": "/graphql/batch",
    },
  ],
  [
    "/graphql/batch",
    {
      "body": "[{"id":"2","query":"","variables":{}},{"id":"3","query":"","variables":{}}]",
      "headers": {
        "Accept": "*/*",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "url": "/graphql/batch",
    },
  ],
]
`;

exports[`middlewares/batch should handle network failure 1`] = `
{
  "body": "[{"id":"1","query":"","variables":{}},{"id":"2","query":"","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch should handle responses without payload wrapper 1`] = `
{
  "body": "[{"id":"1","query":"","variables":{}},{"id":"2","query":"","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch should handle server errors for all requests 1`] = `
{
  "body": "[{"id":"1","query":"","variables":{}},{"id":"2","query":"","variables":{}},{"id":"3","query":"","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch should handle server errors for one request 1`] = `
{
  "body": "[{"id":"1","query":"","variables":{}},{"id":"2","query":"","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch should make a successfull single request 1`] = `
{
  "body": "{"id":"1","query":"","variables":{}}",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "signal": AbortSignal {},
}
`;

exports[`middlewares/batch should make a successfully batch request 1`] = `
{
  "body": "[{"id":"1","query":"","variables":{}},{"id":"2","query":"","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch should make a successfully batch request with duplicate request payloads 1`] = `
{
  "body": "[{"id":"2","query":"","variables":{}},{"id":"2","query":"duplicate","variables":{"duplicate":true}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;

exports[`middlewares/batch should reject if server does not return response for duplicate request payloads 1`] = `
{
  "body": "[{"id":"1","query":"","variables":{}},{"id":"2","query":"","variables":{}},{"id":"3","query":"","variables":{}}]",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "url": "/graphql/batch",
}
`;
